--- a/style.css
+++ b/style.css
@@ -88,19 +88,19 @@ img {
     width: 100%;
 }
 
-section {
+.icons {
     padding: 2em 0;
 }
 
-section small {
+.icons small {
     color: var(--color);
 }
 
-section:last-child {
+.icons:last-child {
     padding-bottom: 0;
 }
 
-section:not(:last-child) {
+.icons:not(:last-child) {
     border-bottom: 1px solid rgb(204, 204, 204);
 }
 
